# crossbring-rt-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
apps/: rt_engine_main.cpp  zmq_sub_demo.cpp
configs/: config.docker.json  config.example.json  grafana-dashboard.json  prometheus-docker.yml  prometheus.yml
configs/grafana-dashboards/: crossbring-rt-engine.json
configs/grafana-provisioning/dashboards/: dashboards.yml
include/crossbring/: event.h
include/crossbring/core/: engine.h  queue.h
include/crossbring/http/: event_hub.h  http_server.h
include/crossbring/sinks/: batching_sink.h  console_sink.h  recent_buffer_sink.h  sink.h  sqlite_sink.h  zmq_sink.h
include/crossbring/sources/: af_https_source.h  file_json_source.h  sensor_simulator.h
scripts/: build.ps1  fetch_af_jobs.ps1
src/core/: engine.cpp  queue.cpp
src/http/: http_server.cpp
src/sinks/: console_sink.cpp  recent_buffer_sink.cpp  sqlite_sink.cpp  zmq_sink.cpp
src/sources/: af_https_source.cpp  file_json_source.cpp  sensor_simulator.cpp
web/bridge/: Dockerfile  package.json  server.js
web/bridge/client/: index.html
